# drakde

./: .gitignore  justfile  pyproject.toml
rust/: Cargo.toml
rust/src/: bivariate.rs  lib.rs
scripts/: compare_scipy.py  verify_accuracy.py
src/drakde/: __init__.py  __init__.pyi  __main__.py  _drakde.pyi
