[project]
name = "drakde"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pavadol Yamsiri", email = "pavyamsiri@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.5.1",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "drakde._drakde"

[tool.pyright]
include = ["src"]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "matplotlib>=3.11.1",
    "optype[numpy]>=0.18.0",
    "scipy>=1.18.0",
    "scipy-stubs>=1.18.0.1",
    "pyqt6>=6.11.0",
]
